--- a/st.html
+++ b/st.html
@@ -1,1 +1,140 @@
 <!DOCTYPE html>
+<html lang="fa" dir="rtl">
+    <head>
+        <meta charset="utf-8" />
+        <meta content="width=device-width, initial-scale=1" name="viewport" />
+        <link
+          rel="stylesheet"
+          href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+          crossorigin="anonymous"
+        />
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+        <link rel="stylesheet" href="styles.css" />
+        <title>شرکت برنامه‌نویسی</title>
+      </head>
+      <body>
+        <section>
+            <div class="container">
+              <div class="row justify-content-lg-center">
+                <div class="col-lg-3">
+                  <br> <br> <br>
+                  <div class="card text-right">
+                    <div class="card-header card-minor">
+                        <div class="container ">
+                          <p>98105643</p>
+                          <h4>آرش توانگر</h4>
+                          <p>مهندسی کامپیوتر دانشگاه صنعتی شریف 98</p>
+                        </div>
+                    </div>
+                    <br>
+                      <div class="container">
+                        <div>
+                          <div class="talents text-center">&gt;</div>
+                          <p class="card-text d-inline text-black-50"> شرکت برنامه ‌نویسی عقاب</p>
+                        </div>
+                        <div>
+                          <div class="talents text-center">&gt;</div>
+                          <p class="card-text d-inline text-black-50">شرکت برنامه ‌نویسی عقاب</p>
+                        </div>
+                        <div>
+                          <div class="talents text-center">&gt;</div>
+                          <p class="card-text d-inline text-black-50">شرکت برنامه ‌نویسی عقاب</p>
+                        </div>
+                        <div>
+                          <div class="talents text-center">&gt;</div>
+                          <p class="card-text d-inline text-black-50"> شرکت برنامه‌ نویسی عقاب</p>
+                        </div>
+                        <br>
+                        <button type="button" class="btn btn-social mx-auto d-block" onclick="window.open('https://github.com/ArashST79', '_blank');">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+                              <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
+                            </svg> Arashst
+                        </button>
+                        <br>
+                      </div>
+                  </div>
+                </div>
+                <div class="col-lg-4">
+                  <div class="card text-right imp-card">
+                    <div class="card-header card-middle">
+                        <div class="position-absolute imp-label"><span style="font-size: 1.8rem;">مهم</span></div>
+                        <div class="container">
+                          <p>98110062</p>
+                          <h3>کیان عمومی</h3>
+                          <p>مهندسی کامپیوتر دانشگاه صنعتی شریف 98</p>
+                        </div>
+                    </div>
+                    <br>
+                      <div class="container" style="font-size: 1.5rem;">
+                        <div>
+                            <div class="talents text-center">&gt;</div>
+                            <p class="card-text d-inline text-black-50"> شرکت برنامه ‌نویسی عقاب</p>
+                          </div>
+                          <div>
+                            <div class="talents text-center">&gt;</div>
+                            <p class="card-text d-inline text-black-50">شرکت برنامه ‌نویسی عقاب</p>
+                          </div>
+                          <div>
+                            <div class="talents text-center">&gt;</div>
+                            <p class="card-text d-inline text-black-50">شرکت برنامه ‌نویسی عقاب</p>
+                          </div>
+                          <div>
+                            <div class="talents text-center">&gt;</div>
+                            <p class="card-text d-inline text-black-50"> شرکت برنامه‌ نویسی عقاب</p>
+                          </div>
+                        <br>
+                        <button type="button" class="btn btn-social mx-auto d-block" onclick="window.open('https://github.com/nonaghazizadeh', '_blank');">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+                              <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
+                            </svg> kianomoomi
+                        </button>
+                        <br>
+                      </div>
+                  </div>
+                </div>
+                <div class="col-lg-3">
+                  <br> <br>
+                  <div class="card text-right">      
+                    <div class="card-header card-minor">
+                        <div class="container">
+                          <p>98171126</p>
+                          <h4>علیرضا مرادیان</h4>
+                          <p>مهندسی کامپیوتر دانشگاه صنعتی شریف 98</p>
+                        </div>
+                    </div>
+                    <br>
+                      <div class="container">
+                        <div>
+                            <div class="talents text-center">&gt;</div>
+                            <p class="card-text d-inline text-black-50"> شرکت برنامه ‌نویسی عقاب</p>
+                          </div>
+                          <div>
+                            <div class="talents text-center">&gt;</div>
+                            <p class="card-text d-inline text-black-50">شرکت برنامه ‌نویسی عقاب</p>
+                          </div>
+                          <div>
+                            <div class="talents text-center">&gt;</div>
+                            <p class="card-text d-inline text-black-50">شرکت برنامه ‌نویسی عقاب</p>
+                          </div>
+                          <div>
+                            <div class="talents text-center">&gt;</div>
+                            <p class="card-text d-inline text-black-50"> شرکت برنامه‌ نویسی عقاب</p>
+                          </div>
+                        <br>
+                        <button type="button" class="btn btn-social mx-auto d-block" onclick="window.open('https://github.com/youngbizman', '_blank');">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+                              <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
+                            </svg> youngbizman
+                        </button>
+                        <br>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
+      </body>
+</html>
+
